# eventhub

./: .env.example  .gitignore  .pre-commit-config.yaml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_12_10_1853-66b2330842d0_create_user_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py
backend/app/core/: config.py  db.py  exceptions.py  security.py
backend/app/models/: user.py
backend/app/repositories/: __init__.py  user.py
backend/app/schemas/: __init__.py  user.py
backend/app/services/: user.py
infra/: docker-compose.yaml
